--- a/src/main/webapp/Refund-Order.html
+++ b/src/main/webapp/Refund-Order.html
@@ -176,13 +176,10 @@
                     <div class="wrap-breadcrumb">
                         <ol class="breadcrumb">
                             <!--第一行文字/////////////////////////////////////////////////////////////-->
-                            <li><a href=""><h4>已退款订单</h4></a>
+                            <li><h2>已退款订单</h2>
                             </li>
+                            <p>&nbsp;</p>
                         </ol>
-                    </div>
-                    <div class="section-title-page section-title-page_mod-a">
-                        <!--第二行文字/////////////////////////////////////////////////////////////-->
-                        <h1 class="ui-title-page">F i n i s h R e f u n d O r d e r s</h1>
                     </div>
                 </div>
             </div>
@@ -258,8 +255,10 @@
                     <section class="footer-section">
                         <h3 class="footer-section__title ui-title-inner">写 下 您 宝 贵 的 建 议</h3>
                         <form class="footer-form">
-                            <input class="footer-form__input form-control" type="email" placeholder="enter your advice">
-                            <button class="footer-form__btn"><i class="icon fa fa-paper-plane"></i>
+                            <input class="footer-form__input form-control" type="text" placeholder="enter your advice"
+                                   id="advice">
+                            <button class="footer-form__btn" onclick="sendAdvice()"><i
+                                    class="icon fa fa-paper-plane"></i>
                             </button>
                         </form>
                     </section>
@@ -282,29 +281,22 @@
                                         <li class="footer-list__item"><a href="seller_login.html"
                                                                          class="footer-list__link">商家入驻</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Careers</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Careers</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link"
-                                                                         href="">International</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">International</a>
                                         </li>
-                                        <!--<li class="footer-list__item"><a class="footer-list__link"-->
-                                        <!--href="privacy-policy.html">Privacy</a>-->
-                                        <!--</li>-->
-                                        <!--<li class="footer-list__item"><a class="footer-list__link"-->
-                                        <!--href="terms-of-use.html">Terms</a>-->
-                                        <!--</li>-->
                                     </ul>
                                 </div>
                                 <div class="col-md-6">
                                     <ul class="footer-list list-unstyled">
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Contact</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Contact</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Returns</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Returns</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Warranty</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Warranty</a>
                                         </li>
                                         <!--帮助入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a class="footer-list__link" href="about.html">Help</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Help</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -316,7 +308,7 @@
             <div class="footer-btm">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="footer-info">
+                        <div class="footer-info">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             我们用心服务每一位用户，诚信经营每一件商品，严格的审核商家进驻本平台。<br>
                             拒绝并抵制假冒伪劣产品的出现与售卖。从自身做起，树立诚信，向假冒伪劣产品宣战，自觉接受相关部门的监督管理和接受广大消费者的监督。
                             履行经营者的义务，保证所生产经销的商品符合保障人身财产安全的要求和商品应当具有的质量和使用性能；<br>
@@ -328,8 +320,8 @@
                     </div>
                     <div class="col-md-6 col-md-offset-2">
                         <div class="copyright"><span
-                                class="copyright__main">©  2018 WeTao  ® All Right Reserved</span><a
-                                class="copyright__link" href="home.html"> Created by Cc</a>
+                                class="copyright__main">©  2018 WeTao  ® All Right Reserved</span>
+                            <a class="copyright__link"> Created by Cc</a>
                         </div>
                     </div>
                 </div>
@@ -374,6 +366,8 @@
 <script src="static/js/order.js"></script>
 <script src="static/js/order_detail.js"></script>
 <script src="static/js/seller.js"></script>
+<!--底部jq-->
+<script type="text/javascript" src="static/jq/advice.js"></script>
 <script>
     $(function () {
         getorder5(1);
