--- a/src/main/webapp/seller_login.html
+++ b/src/main/webapp/seller_login.html
@@ -29,44 +29,11 @@
 <!-- FULL SCREEN MENU-->
 <!-- ==========================-->
 <div class="wrap-fixed-menu" id="fixedMenu">
-
-
     <button type="button" class="fullmenu-close"><i class="fa fa-times"></i></button>
-
     <nav class="fullscreen-center-menu">
-
         <!--左上角隐藏的导航栏入口/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
-        <div id="dl-menu" class="dl-menuwrapper">
-            <ul class="dl-menu menu-item list-unstyled">
-
-
-                <li class="has-children ">
-                    <a href="#"><span>订单管理 <i class="arrow_carrot-right"></i> </span></a>
-                    <ul class="dl-submenu">
-
-                        <li><a href="#"><span>待发货</span></a></li>
-                        <li><a href="#"><span>已发货</span></a></li>
-                        <li><a href="#"><span>已完成</span></a></li>
-
-
-                    </ul>
-                </li>
-                
-                <li class="has-children ">
-                    <a href="shop-1.html"><span>售后 <i class="arrow_carrot-right"></i>  </span></a>
-                    <ul class="dl-submenu">
-                        <li><a href="#"><span>待退款</span></a></li>
-                        <li><a href="#"><span>已退款</span></a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-
-
     </nav>
-
 </div>
-
 
 <div class="l-theme animated-css" data-header="sticky" data-header-top="200" data-canvas="container">
     <!-- ==========================-->
@@ -95,67 +62,43 @@
     </div>
     <header class="header-1 header header-color-black header-topbar-hidden header-boxed-width navbar-fixed-top header-background-trans header-navibox-1-left header-navibox-2-right">
         <div class="container container-boxed-width">
-            <div class="top-bar">
-                <div class="container">
-                    <div class="header-topbarbox-1">
-                        <ul>
-                            <li>WE HELPING YOU: INFO@EXAMPLE.COM</li>
-                        </ul>
-                    </div>
-                    <div class="header-topbarbox-2">
-                        <ul class="social-links">
-                            <li><a href="/" target="_blank"><i class="social_icons fa fa-facebook-square"></i></a>
-                            </li>
-                            <li><a href="/" target="_blank"><i class="social_icons fa fa-youtube-square"></i></a>
-                            </li>
-                            <li><a href="/" target="_blank"><i class="social_icons fa fa-vimeo-square"></i></a>
-                            </li>
-                            <li><a href="/" target="_blank"><i class="social_icons fa fa-twitter-square"></i></a>
-                            </li>
-                            <li class="li-last"><a href="/" target="_blank"><i
-                                    class="social_icons fa fa-tumblr-square"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
             <nav class="navbar" id="nav">
                 <div class="container">
                     <div class="header-navibox-1">
                         <!-- Desctop Trigger Start-->
-                        <button class="menu-mobile-button js-toggle-screen toggle-menu-button"><i
+                        <!--<button class="menu-mobile-button js-toggle-screen toggle-menu-button"><i
                                 class="toggle-menu-button-icon"><span></span><span></span><span></span><span></span><span></span><span></span></i>
-                        </button>
+                        </button>-->
                         <!-- Desctop Trigger End-->
-                        <ul class="main-menu yamm nav navbar-nav">
-                            <!--logo左边导航栏////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+                        <!--<ul class="main-menu yamm nav navbar-nav">
+                            &lt;!&ndash;logo左边导航栏////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////&ndash;&gt;
                             <li><a href="#"><h5>主 页</h5></a>
                             </li>
                             <li><a href="#"><h5>店铺信息</h5></a>
                             </li>
                             <li><a href="#"><h5>评论管理</h5></a>
                             </li>
-                        </ul>
+                        </ul>-->
                     </div>
                     <div class="header-navibox-2">
                         <!--logo右边导航栏///////////////////////////////////////////////////////////////////////////////////////-->
-                        <ul class="nav navbar-nav clearfix vcenter">
+                        <!--<ul class="nav navbar-nav clearfix vcenter">
                             <li><a href="#"><h5>客服</h5></a></li>
-                            <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
+                            &lt;!&ndash;个人资料/////////////////////////////////////////////////////////////////////////////////////////&ndash;&gt;
                             <li><a href="#"><h5>个人信息</h5></a>
                             </li>
-                            <!-- <li><span class="header-cart"><a href="#"><i class="icon fa fa-shopping-cart"
+                            &lt;!&ndash; <li><span class="header-cart"><a href="#"><i class="icon fa fa-shopping-cart"
                                                                          aria-hidden="true"></i></a><span
                                     class="header-cart-count bg-primary">0</span></span>
-                            </li> -->
+                            </li> &ndash;&gt;
                         </ul>
                         <ul class="nav-language list-inline">
-                            <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
+                            &lt;!&ndash;右上角的登陆、退出按钮/////////////////////////////////////////////////////////////&ndash;&gt;
                             <li><a href="seller_login.html">登 陆</a>
                             </li>
                             <li><a href="#">退出</a>
                             </li>
-                        </ul>
+                        </ul>-->
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
                         <a class="navbar-brand scroll" href="items-Homepage.html">
                             <!--导航栏最中间的logo/////////////////////////////////////////////////////////////////////////////////-->
@@ -176,13 +119,10 @@
                     <div class="wrap-breadcrumb">
                         <ol class="breadcrumb">
                             <!--第一行文字/////////////////////////////////////////////////////////////-->
-                            <li><a href=""><h4>登陆微淘商家后台</h4></a>
+                            <li><h2>登陆微淘商家后台</h2>
                             </li>
+                            <p>&nbsp;</p>
                         </ol>
-                    </div>
-                    <div class="section-title-page section-title-page_mod-a">
-                        <!--第二行文字/////////////////////////////////////////////////////////////-->
-                        <h1 class="ui-title-page">S e l l e r   L o g i n</h1>
                     </div>
                 </div>
             </div>
@@ -335,8 +275,10 @@
                     <section class="footer-section">
                         <h3 class="footer-section__title ui-title-inner">写 下 您 宝 贵 的 建 议</h3>
                         <form class="footer-form">
-                            <input class="footer-form__input form-control" type="email" placeholder="enter your advice">
-                            <button class="footer-form__btn"><i class="icon fa fa-paper-plane"></i>
+                            <input class="footer-form__input form-control" type="text" placeholder="enter your advice"
+                                   id="advice">
+                            <button class="footer-form__btn" onclick="sendAdvice()"><i
+                                    class="icon fa fa-paper-plane"></i>
                             </button>
                         </form>
                     </section>
@@ -359,29 +301,22 @@
                                         <li class="footer-list__item"><a href="seller_login.html"
                                                                          class="footer-list__link">商家入驻</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Careers</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Careers</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link"
-                                                                         href="">International</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">International</a>
                                         </li>
-                                        <!--<li class="footer-list__item"><a class="footer-list__link"-->
-                                        <!--href="privacy-policy.html">Privacy</a>-->
-                                        <!--</li>-->
-                                        <!--<li class="footer-list__item"><a class="footer-list__link"-->
-                                        <!--href="terms-of-use.html">Terms</a>-->
-                                        <!--</li>-->
                                     </ul>
                                 </div>
                                 <div class="col-md-6">
                                     <ul class="footer-list list-unstyled">
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Contact</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Contact</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Returns</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Returns</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Warranty</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Warranty</a>
                                         </li>
                                         <!--帮助入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a class="footer-list__link" href="about.html">Help</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Help</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -393,7 +328,7 @@
             <div class="footer-btm">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="footer-info">
+                        <div class="footer-info">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             我们用心服务每一位用户，诚信经营每一件商品，严格的审核商家进驻本平台。<br>
                             拒绝并抵制假冒伪劣产品的出现与售卖。从自身做起，树立诚信，向假冒伪劣产品宣战，自觉接受相关部门的监督管理和接受广大消费者的监督。
                             履行经营者的义务，保证所生产经销的商品符合保障人身财产安全的要求和商品应当具有的质量和使用性能；<br>
@@ -405,8 +340,8 @@
                     </div>
                     <div class="col-md-6 col-md-offset-2">
                         <div class="copyright"><span
-                                class="copyright__main">©  2018 WeTao  ® All Right Reserved</span><a
-                                class="copyright__link" href="home.html"> Created by Cc</a>
+                                class="copyright__main">©  2018 WeTao  ® All Right Reserved</span>
+                            <a class="copyright__link"> Created by Cc</a>
                         </div>
                     </div>
                 </div>
@@ -452,7 +387,8 @@
 <script src="static/js/seller.js"></script>
 <script type="text/javascript" src="static/js/area_hzb.js"></script>
 <script src="static/jq/ajaxfileupload.js"></script>
-
+<!--底部jq-->
+<script type="text/javascript" src="static/jq/advice.js"></script>
 
 </body>
 
