--- a/src/main/webapp/store_add.html
+++ b/src/main/webapp/store_add.html
@@ -159,8 +159,8 @@
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
                         <a class="navbar-brand scroll" href="items-Homepage.html">
                             <!--导航栏最中间的logo/////////////////////////////////////////////////////////////////////////////////-->
-                            <img class="normal-logo" src="static/wt/images/logo.png" alt="logo">
-                            <img class="scroll-logo hidden-xs" src="static/wt/images/logo.png" alt="logo">
+                            <img class="normal-logo" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
+                            <img class="scroll-logo hidden-xs" src="static/wt/WeTao_logo_small.jpg" alt="logo">
                         </a>
                     </div>
                 </div>
@@ -175,25 +175,22 @@
                     <div class="wrap-breadcrumb">
                         <ol class="breadcrumb">
                             <!--第一行文字/////////////////////////////////////////////////////////////-->
-                            <li><a href=""><h4>添加店铺</h4></a>
-                            </li>
+                            <h2 style="float:right;margin-right: 900px">添加店铺</h2>
+                            <p>&nbsp;</p>
                         </ol>
                     </div>
-                    <div class="section-title-page section-title-page_mod-a">
-                        <!--第二行文字/////////////////////////////////////////////////////////////-->
-                        <h1 class="ui-title-page">A d d S t o r e</h1>
-                    </div>
+
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <div class="woocommerce">
+                    <div class="woocommerce" style="width:1000px;float: right;">
 
                         <form name="checkout" method="post" class="checkout woocommerce-checkout"
                               enctype="multipart/form-data" _lpchecked="1">
                             <div class="col2-set" id="customer_details">
                                 <!-- 信息显示 -->
-                                <div class="col-1">
+                                <div class="col-1" style="float: right;margin-right: 400px">
                                     <div class="woocommerce-billing-fields">
                                         <h3>输入店信息</h3>
 
@@ -209,11 +206,11 @@
                                 </div>
                             </div>
                             <div id="order_review" class="woocommerce-checkout-review-order">
-                                <div id="payment" class="woocommerce-checkout-payment">
+                                <div id="payment" class="woocommerce-checkout-payment" style="width: 500px;float: right;margin-right: 400px">
                                     <div class="form-row place-order">
                                         <!--确认按钮////////////////////////////////////////////////-->
                                         <input type="button" class="button alt" value="确 认 Save" onclick="storeOnAdd1()"
-                                               data-value="Place order"style="line-height:1.3;border:0"/>
+                                               data-value="Place order"style="line-height:1.3;border:0;"/>
                                     </div>
                                     <div class="form-row place-order">
                                         <input type="button" class="button alt" value="返 回 Return"
@@ -237,8 +234,10 @@
                     <section class="footer-section">
                         <h3 class="footer-section__title ui-title-inner">写 下 您 宝 贵 的 建 议</h3>
                         <form class="footer-form">
-                            <input class="footer-form__input form-control" type="email" placeholder="enter your advice">
-                            <button class="footer-form__btn"><i class="icon fa fa-paper-plane"></i>
+                            <input class="footer-form__input form-control" type="text" placeholder="enter your advice"
+                                   id="advice">
+                            <button class="footer-form__btn" onclick="sendAdvice()"><i
+                                    class="icon fa fa-paper-plane"></i>
                             </button>
                         </form>
                     </section>
@@ -258,26 +257,25 @@
                                 <div class="col-md-5">
                                     <ul class="footer-list list-unstyled">
                                         <!--关于我们入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a class="footer-list__link" href="blog1.html">About
-                                            Us</a>
+                                        <li class="footer-list__item"><a href="seller_login.html"
+                                                                         class="footer-list__link">商家入驻</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Careers</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Careers</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link"
-                                                                         href="">International</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">International</a>
                                         </li>
                                     </ul>
                                 </div>
                                 <div class="col-md-6">
                                     <ul class="footer-list list-unstyled">
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Contact</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Contact</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Returns</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Returns</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Warranty</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Warranty</a>
                                         </li>
                                         <!--帮助入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a class="footer-list__link" href="about.html">Help</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Help</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -289,17 +287,20 @@
             <div class="footer-btm">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="footer-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel
-                            ultrices velit. Etiam pellentesque nibh at quam facilisis, eu maximus dolor tincidunt. Cras
-                            porta luctus pretium. Nam posuere libero a neque rhoncus, eu
-                            viverra mauris volutpat. Integer at venenatis mi. Sed sagittis lobortis gravida. Phasellus
-                            ac finibus sem, et mattis dolor. Vestibulum vitae hendrerit urna, id volutpat magna.
+                        <div class="footer-info">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            我们用心服务每一位用户，诚信经营每一件商品，严格的审核商家进驻本平台。<br>
+                            拒绝并抵制假冒伪劣产品的出现与售卖。从自身做起，树立诚信，向假冒伪劣产品宣战，自觉接受相关部门的监督管理和接受广大消费者的监督。
+                            履行经营者的义务，保证所生产经销的商品符合保障人身财产安全的要求和商品应当具有的质量和使用性能；<br>
+                            不掺杂使假、以假充真、以次充好；不生产销售有毒有害、失效、腐烂变质的食品和不合格的食品；<br>
+                            不使用不规范、不合格的计量器具销售商品；不销售应当检验、检疫而未检验、检疫的商品或检验、检疫不合格的商品；
+                            不销售国家明令禁止上市或淘汰的商品；
+                            不作虚假宣传，不误导消费者。
                         </div>
                     </div>
                     <div class="col-md-6 col-md-offset-2">
                         <div class="copyright"><span
-                                class="copyright__main">©  2018 WeTao  ® All Right Reserved</span><a
-                                class="copyright__link" href="home.html"> Created by Cc</a>
+                                class="copyright__main">©  2018 WeTao  ® All Right Reserved</span>
+                            <a class="copyright__link"> Created by Cc</a>
                         </div>
                     </div>
                 </div>
@@ -346,7 +347,8 @@
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
 <script src="static/js/seller.js"></script>
-
+<!--底部jq-->
+<script type="text/javascript" src="static/jq/advice.js"></script>
 </body>
 
 </html>
